--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.5",
-    "@mui/material": "^6.1.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
+    "@mui/x-date-pickers": "^5.0.12",
     "@types/styled-components": "^5.1.34",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.8.2",
     "react-calendar": "^5.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-outside-click-handler": "^1.3.0",
@@ -27,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.10",
+    "@types/react-big-calendar": "^1.15.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.11.1",
